<resources>
    <string name="app_name">Event Logger</string>
    <string name="app_name_pro">Event Logger Pro</string>
    <string name="app_name_pro_styled"><![CDATA[Event Logger <font color="#00B0FF">Pro</font>]]></string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="wifi_state_changed" formatted="false"><![CDATA[WiFi State Changed: <font color="%s">[%s]</font>]]></string>
    <string name="disabled_upper">DISABLED</string>
    <string name="enabled_upper">ENABLED</string>
    <string name="wifi_toggle_description">WiFi has been %s</string>
    <string name="enabled_lower">enabled</string>
    <string name="disabled_lower">disabled</string>
    <string name="sec">s</string>
    <string name="minut">min</string>
    <string name="hour">hr</string>
    <string name="day">d</string>
    <string name="week">w</string>
    <string name="month">mth</string>
    <string name="year">y</string>
    <string name="na">n/a</string>
    <string name="_">∞</string>
    <string name="connected_upper">CONNECTED</string>
    <string name="wifi_connected_description" formatted="false"><![CDATA[Connected to WiFi network.<br>
                •SSID: %s<br>
                •BSSID: %s<br>
                •MAC: %s<br>
                •IP Address: %s<br>]]></string>
    <string name="wifi_disconnected_description"><![CDATA[Disconnected from WiFi network.]]></string>
    <string name="disconnected_upper">DISCONNECTED</string>
    <string name="bluetooth_toggle_description">Bluetooth has been %s</string>
    <string name="bluetooth_state_changed" formatted="false"><![CDATA[Bluetooth State Changed: <font color="%s">[%s]</font>]]></string>
    <string name="bluetooth_connected_description" formatted="false"><![CDATA[Established connection with bluetooth device.<br>
                    •Address: %s<br>
                    •Name: %s<br>]]></string>
    <string name="bluetooth_disconnected_description" formatted="false"><![CDATA[Bluetooth connection lost.<br>
                    •Address: %s<br>
                    •Name: %s<br>]]></string>
    <string name="media_start_short">Media playback started</string>
    <string name="media_start_long">Media playback has started</string>
    <string name="media_pause_short">Media playback paused</string>
    <string name="media_pause_long">Media playback is paused</string>
    <string name="media_stop_short">Media playback stopped</string>
    <string name="media_stop_long">Media playback has stopped</string>
    <string name="orientation_changed">Orientation Changed: [%s]</string>
    <string name="orientation_changed_desc" formatted="false">Device orientation has changed from %s to %s</string>
    <string name="sms_received">SMS received</string>
    <string name="received_sms_desc">Received SMS from: %s</string>
    <string name="boot_completed">Boot Completed</string>
    <string name="boot_completed_desc">Device has booted successfully.</string>
    <string name="device_reboot">Device Rebooting...</string>
    <string name="reboot_desc">Device reboot process has started.</string>
    <string name="device_shutdown">Device Shutting down...</string>
    <string name="shutdown_desc">Device shutdown process has started.</string>
    <string name="time_changed">Time changed</string>
    <string name="time_changed_desc"><![CDATA[User has changed device time settings.<br>This event will also happen from time to time if "Automatic date & time" option is enabled]]></string>
    <string name="date_changed">Date changed</string>
    <string name="date_changed_desc"><![CDATA[User has changed device date settings.<br>This event will also happen from time to time if "Automatic date & time" option is enabled]]></string>
    <string name="timezone_changed">Timezone changed</string>
    <string name="timezone_changed_desc">User has changed device timezone: %s</string>
    <string name="airplane_mode_toggled" formatted="false"><![CDATA[Airplane Mode Toggled: <font color="%s">[%s]</font>]]></string>
    <string name="airplane_mode_desc">Airplane Mode has been %s.</string>
    <string name="wallpaper_changed">Wallpaper changed</string>
    <string name="wallpaper_changed_desc">User has changed wallpaper.</string>
    <string name="action_fiter">Filter</string>
    <string name="action_about">About</string>
    <string name="landscape">landscape</string>
    <string name="portrait">portrait</string>
    <string name="gps_state_changed" formatted="false"><![CDATA[GPS State Changed: <font color="%s">[%s]</font>]]></string>
    <string name="gps_state_changed_desc">GPS has been %s by the user.</string>
    <string name="power_connected">Power Source Connected</string>
    <string name="power_connected_desc">Device has been connected to power source</string>
    <string name="power_disconnected">Power Source Disconnected</string>
    <string name="power_disconnected_desc">Device has been disconnected from power source</string>
    <string name="battery_state_changed" formatted="false"><![CDATA[Battery State Changed: <font color="%s">[%s]</font>]]></string>
    <string name="battery_state_desc" formatted="false"><![CDATA[Battery state has changed.<br>
                •Status: %s<br>
                •Level: %s<br>
                •Health: %s<br>
                •Technology: %s<br>
                •Temperature: %s<br>
                •Voltage: %s<br>]]></string>
    <string name="unknown">unknown</string>
    <string name="charging">charging</string>
    <string name="not_charging">not charging</string>
    <string name="full">full</string>
    <string name="discharging">discharging</string>
    <string name="good">good</string>
    <string name="cold">cold</string>
    <string name="dead">dead</string>
    <string name="over_voltage">Over Voltage</string>
    <string name="overheat">overheat</string>
    <string name="unspecified_failure">unspecified failure</string>
    <string name="battery_low">Battery Low</string>
    <string name="battery_ok">Battery OK</string>
    <string name="battery_low_desc" formatted="false"><![CDATA[Battery level is low.<br>This warning is usually issued when battery level drops below 15%, 10%, or 5%.]]></string>
    <string name="battery_ok_desc">Battery level is ok again after being low.</string>
    <string name="volume_changed">Volume Changed [%s]</string>
    <string name="volume_changed_desc" formatted="false">%s Volume has changed from %s to %s</string>
    <string name="ringer">Ringer</string>
    <string name="media">Media</string>
    <string name="locale_changed">Locale Changed: [%s]</string>
    <string name="locale_changed_desc"><![CDATA[Devices locale has changed.<br>New Locale: %s]]></string>
    <string name="screen_off">Screen Turned Off</string>
    <string name="screen_off_desc">Screen has been turned off.</string>
    <string name="screen_on">Screen Turned On</string>
    <string name="screen_on_desc">Screen has been turned on.</string>
    <string name="screen_unlocked">Screen Unlocked</string>
    <string name="screen_unlocked_desc">User has unlocked the device.</string>
    <string name="headset_plugged">Headphones Plugged-In [%s]</string>
    <string name="headset_unplugged">Headphones Unplugged [%s]</string>
    <string name="headset_status_changed">Headphones Status Changed [UNKNOWN]</string>
    <string name="headset_plugged_desc" formatted="false"><![CDATA[Headphones Plugged-In.<br>
                •Name: %s<br>
                •Has Mic.: %s<br>]]></string>
    <string name="headset_unplugged_desc" formatted="false"><![CDATA[Headphones Unplugged.<br>
                •Name: %s<br>
                •Has Mic.: %s<br>]]></string>
    <string name="headset_unknown_desc" formatted="false"><![CDATA[
    Headphones Status Changed<br>There was no information whether headset was plugged-in or unplugged or any other info about headset.
    ]]></string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="scanner_started">Media Scanner Started</string>
    <string name="scanner_started_desc">Media Scanner started scanning files.</string>
    <string name="scanner_finished">Media Scanner Finished</string>
    <string name="scanner_finished_desc">Media Scanner finished scanning files.</string>
    <string name="outgoing_call">New Outgoing Call: [%s]</string>
    <string name="outgoing_call_desc"><![CDATA[New Outgoing Call has been made:<br>Phone Number: %s]]></string>
    <string name="incoming_call">New Incoming Call: [%s]</string>
    <string name="incoming_call_desc"><![CDATA[New Incoming Call was detected:<br>Phone Number: %s]]></string>
    <string name="app_started">App Started/Resumed: [%s]</string>
    <string name="app_started_desc" formatted="false"><![CDATA[Application \'%s\'[%s] has been started or resumed.<br>The application was brought in front of all other applications.]]></string>
    <string name="event_details">Event Details:</string>
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="info">Info</string>
    <string name="ok">OK</string>
    <string name="xposed_desc">Allows logging of aditional events such as: toggling mobile network, playing pausing audio/video...</string>
    <string name="restart_event_service_desc">Allowes other packages to restart EventService</string>
    <string name="restart_event_service_label">RESTART_EVENT_SERVICE</string>
    <string name="now">now</string>
    <string name="no_events">There are no events at this moment!\nTry changing filter or go do something with your phone and come back later.</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="enter_unlock_key">Enter Unlock Key</string>
    <string name="ads_removed">Ads are removed.</string>
    <string name="ads_not_removed">Ads are showing.</string>
    <string name="wrong_key">Wrong Unlock Key</string>
    <string name="unlock_disabled">Remove ads disabled due to 3 failed attempts!</string>
    <string name="filter_by_type">FILTER BY TYPE</string>
    <string name="filter_by_time">FILTER BY TIME</string>
    <string name="filter_by_level">FILTER BY LEVEL</string>
    <string name="filter_now">FILTER NOW</string>
    <string name="from">from:</string>
    <string name="to">to:</string>
    <string name="wifi">WiFi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="gps">GPS</string>
    <string name="nfc">NFC</string>
    <string name="usb">USB/Power</string>
    <string name="orientation">Orientation</string>
    <string name="locale">Locale</string>
    <string name="screen">Screen</string>
    <string name="sms">SMS</string>
    <string name="applications">Applications</string>
    <string name="call">Call</string>
    <string name="heaphones">Headphones</string>
    <string name="storage">Storage</string>
    <string name="boot">Boot/Shutdown</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="airplane">Airplane Mode</string>
    <string name="battery">Battery</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="volume">Volume</string>
    <string name="copyright">Copyright © Predrag Čokulov</string>
    <string name="all">All</string>
    <string name="action_export">Export</string>
    <string name="action_share">Share(Must Export First)</string>
    <string name="please_wait">Please Wait...</string>
	<string name="time_display">Display Event Time As</string>
	<string name="options">Options</string>
    <string name="display_limit">Max Number of Events to Display</string>
    <string name="clear_db">Clear Database</string>
    <string name="security">Security</string>
    <string name="pin_lock">PIN Lock</string>
    <string name="require_pin_to_unlock">Require PIN to Unlock.</string>
    <string name="pin">PIN</string>
    <string name="default_pin_is">Default PIN is 1234</string>
</resources>