<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/options">

        <ListPreference
            android:entries="@array/timeDisplayEntries"
            android:entryValues="@array/timeDisplayValues"
            android:key="time_display"
            android:title="@string/time_display"
            android:defaultValue="passed"/>

        <ListPreference
            android:entries="@array/displayLimit"
            android:entryValues="@array/displayLimit"
            android:key="items_display_limit"
            android:title="@string/display_limit"
            android:defaultValue="200"/>

        <ListPreference
            android:entries="@array/activeAppCheckIntervalEntries"
            android:entryValues="@array/activeAppCheckIntervalValues"
            android:key="active_app_check_interval"
            android:title="@string/active_app_check_interval"
            android:defaultValue="1000"
            />

        <PreferenceScreen
            android:key="prefs_clear_db"
            android:title="@string/clear_db"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="prefs_security"
        android:title="@string/security">

        <CheckBoxPreference
            android:key="pin_enabled"
            android:title="@string/pin_lock"
            android:summary="@string/require_pin_to_unlock"
            android:defaultValue="false"/>

        <PreferenceScreen
            android:key="lock_pin"
            android:title="@string/pin"
            android:summary="@string/default_pin_is"
            android:defaultValue="81dc9bdb52d04dc20036dbd8313ed055"
            android:inputType="numberPassword"
            android:selectAllOnFocus="true"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/action_about">

        <!--<EditTextPreference
            android:key="remove_ads_unlock_key"
            android:title="@string/remove_ads"
            android:dialogTitle="@string/enter_unlock_key"
            android:inputType="textPassword"/>-->

        <PreferenceScreen
            android:key="prefs_about"
            android:summary="@string/copyright"/>

    </PreferenceCategory>
</PreferenceScreen>
